--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Live Coding</title>
     </head>
     <body>
         <!-- Inizio Titolo -->
@@ -17,10 +17,14 @@
         </p>
         <!-- Fine paragrafo -->
 
+        <div>
+            <a href="www.google.it" target="_blank">Vai a Google</a>
+        </div>
+
         <h2>Lista della spesa</h2>
         <ul>
             <li><strong>Pane</strong></li>
-            <li><strong>Pasta</strong></li>   
+            <li>Pasta</li>   
             <li><strong>Latte</strong></li>
         </ul>
 
